--- a/Index.html
+++ b/Index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Journey of the Blocks</title>
-    <script src="game.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+ <canvas id="canv"></canvas>
+ <script src="game.js"></script>  
 </body>
+
 </html>
