--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
  <canvas id="canv"></canvas>
- <script src="game.js"></script>  
+ <script src="Player.js"></script>
+ <script src="Enemies.js"></script>  
+ <script src="game.js"></script>
 </body>
 
 </html>
